Bug Fix(prl-4234/Serve_order-other_organization): Added loggers